--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
 
     - name: Run unit tests
       run: |
-        python -m unittest discover -s app -p '*_test.py'
+        python -m unittest discover -s app -p '*test_calculator.py'
