--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,4 @@ jobs:
 
     - name: Run unit tests
       run: |
-        python app/tests/test_calculator.py
+        python tests/test_calculator.py
