--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,8 +22,10 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install pylint
         
 
     - name: Run unit tests
       run: |
+        pylint **/*.py
         python tests/test_calculator.py
