--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,5 +27,5 @@ jobs:
 
     - name: Run unit tests
       run: |
-        pylint app/app.py
+        pylint **/*.py
         python tests/test_calculator.py
