--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -5,19 +5,21 @@ on: push
 jobs:
   build:
 
+
+
     runs-on: self-hosted
-    
     strategy:
       matrix:
-        python-version: [3.12]
+        python-version: [3.9, 3.10]  # List the Python versions you want to install
 
     steps:
-    - uses: actions/checkout@v2
-
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+        architecture: x64  # Specify the architecture if needed
+
+        
 
     - name: Install dependencies
       run: |
