--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -4,32 +4,58 @@ on: push
 
 jobs:
   build:
-
-
-
-    runs-on: self-hosted
+    name: Setup ${{ matrix.python }} ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.12]  # List the Python versions you want to install
+        os: [windows-latest]
+        python: [3 3.9.13]
+        exclude:
 
+          - os: windows-latest
+            python: 3.8.15
+
+    
     steps:
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-        architecture: x64  # Specify the architecture if needed
+        - name: Checkout
+          uses: actions/checkout@v4
 
-        
+        - name: setup-python ${{ matrix.python }}
+          id: setup-python
+          uses: ./
+          with:
+            python-version: ${{ matrix.python }}
 
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install pylint
+        - name: Check python-path
+          run: ./__tests__/check-python-path.sh '${{ steps.setup-python.outputs.python-path }}'
+          shell: bash
+
+        - name: Validate version
+          run: |
+            $pythonVersion = (python --version)
+            if ("Python ${{ matrix.python }}" -ne "$pythonVersion"){
+              Write-Host "The current version is $pythonVersion; expected version is ${{ matrix.python }}"
+              exit 1
+            }
+            $pythonVersion
+          shell: pwsh
+
+        - name: Run simple code
+          run: python -c 'import math; print(math.factorial(5))'
+
+
+  
+
+        - name: Install dependencies
+          run: |
+            python -m pip install --upgrade pip
+            python -m pip install pylint
         
-    - name: Running Linter
-      run: |
-        pylint app/*.py
+        - name: Running Linter
+          run: |
+            pylint app/*.py
         
-    - name: Run unit tests
-      run: |
-        python tests/test_calculator.py
+        - name: Run unit tests
+          run: |
+            python tests/test_calculator.py
