--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -1,61 +1,57 @@
-name: Python CI Self Hosted
+name: e2e tests
 
-on: push
+on:
+  push:
+    branches:
+      - main
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    paths-ignore:
+      - '**.md'
 
 jobs:
-  build:
-    name: Setup ${{ matrix.python }} ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
+  test-setup-python:
+    name: Test setup-python
+    runs-on: ${{ matrix.operating-system }}
     strategy:
-      fail-fast: false
       matrix:
-        os: [windows-latest]
-        python: [3 3.9.13]
-        exclude:
-
-          - os: windows-latest
-            python: 3.8.15
-
-    
+        operating-system: [windows-latest]
     steps:
-        - name: Checkout
-          uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-        - name: setup-python ${{ matrix.python }}
-          id: setup-python
-          uses: ./
-          with:
-            python-version: ${{ matrix.python }}
+      - name: Run with setup-python 3.8.1
+        uses: ./
+        with:
+          python-version: 3.8.1
+      - name: Verify 3.8.1
+        run: python __tests__/verify-python.py 3.8.1
 
-        - name: Check python-path
-          run: ./__tests__/check-python-path.sh '${{ steps.setup-python.outputs.python-path }}'
-          shell: bash
+      - name: Run with setup-python 3.10
+        id: cp310
+        uses: ./
+        with:
+          python-version: '3.10'
+      - name: Verify 3.10
+        run: python __tests__/verify-python.py 3.10
+      - name: Run python-path sample 3.10
+        run: pipx run --python '${{ steps.cp310.outputs.python-path }}' nox --version
 
-        - name: Validate version
-          run: |
-            $pythonVersion = (python --version)
-            if ("Python ${{ matrix.python }}" -ne "$pythonVersion"){
-              Write-Host "The current version is $pythonVersion; expected version is ${{ matrix.python }}"
-              exit 1
-            }
-            $pythonVersion
-          shell: pwsh
+      - name: Run with setup-python ==3.8
+        uses: ./
+        with:
+          python-version: '==3.8'
+      - name: Verify ==3.8
+        run: python __tests__/verify-python.py 3.8
 
-        - name: Run simple code
-          run: python -c 'import math; print(math.factorial(5))'
-
-
-  
-
-        - name: Install dependencies
-          run: |
-            python -m pip install --upgrade pip
-            python -m pip install pylint
-        
-        - name: Running Linter
-          run: |
-            pylint app/*.py
-        
-        - name: Run unit tests
-          run: |
-            python tests/test_calculator.py
+      - name: Run with setup-python <3.11
+        uses: ./
+        with:
+          python-version: '<3.11'
+      - name: Verify <3.11
+        run: python __tests__/verify-python.py 3.10
+      - name: Test Raw Endpoint Access
+        run: |
+          curl -L https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json | jq empty
+        shell: bash
