--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -51,7 +51,16 @@ jobs:
           python-version: '<3.11'
       - name: Verify <3.11
         run: python __tests__/verify-python.py 3.10
-      - name: Test Raw Endpoint Access
+        
+      - name: Install dependencies
         run: |
-          curl -L https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json | jq empty
-        shell: bash
+          python -m pip install --upgrade pip
+          python -m pip install pylint
+        
+      - name: Running Linter
+        run: |
+          pylint app/*.py
+        
+      - name: Run unit tests
+        run: |
+          python tests/test_calculator.py
