--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -51,7 +51,12 @@ jobs:
           python-version: '<3.11'
       - name: Verify <3.11
         run: python __tests__/verify-python.py 3.10
-        
+
+
+      - name: Test Raw Endpoint Access
+        run: |
+          curl -L https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json | jq empty
+        shell: bash
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
