--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -16,10 +16,52 @@ jobs:
     runs-on: ${{ matrix.operating-system }}
     strategy:
       matrix:
-        operating-system: [windows-latest]
+        operating-system: [ubuntu-20.04, windows-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Run with setup-python 3.5
+        uses: ./
+        with:
+          python-version: 3.5
+      - name: Verify 3.5
+        run: python __tests__/verify-python.py 3.5
+
+      - name: Run with setup-python 3.6
+        uses: ./
+        with:
+          python-version: 3.6
+      - name: Verify 3.6
+        run: python __tests__/verify-python.py 3.6
+
+      - name: Run with setup-python 3.7
+        uses: ./
+        with:
+          python-version: 3.7
+      - name: Verify 3.7
+        run: python __tests__/verify-python.py 3.7
+
+      - name: Run with setup-python 3.8
+        uses: ./
+        with:
+          python-version: 3.8
+      - name: Verify 3.8
+        run: python __tests__/verify-python.py 3.8
+
+      - name: Run with setup-python 3.7.5
+        uses: ./
+        with:
+          python-version: 3.7.5
+      - name: Verify 3.7.5
+        run: python __tests__/verify-python.py 3.7.5
+
+      - name: Run with setup-python 3.6.7
+        uses: ./
+        with:
+          python-version: 3.6.7
+      - name: Verify 3.6.7
+        run: python __tests__/verify-python.py 3.6.7
 
       - name: Run with setup-python 3.8.1
         uses: ./
@@ -51,21 +93,7 @@ jobs:
           python-version: '<3.11'
       - name: Verify <3.11
         run: python __tests__/verify-python.py 3.10
-
-
       - name: Test Raw Endpoint Access
         run: |
           curl -L https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json | jq empty
         shell: bash
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install pylint
-        
-      - name: Running Linter
-        run: |
-          pylint app/*.py
-        
-      - name: Run unit tests
-        run: |
-          python tests/test_calculator.py
