--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -18,8 +18,9 @@ jobs:
       matrix:
         operating-system: [windows-latest]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+     
+
+      - uses: actions/checkout@v3
 
       - name: Reuse action
         uses: ./.github/actions/build
