--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -1,102 +1,33 @@
-name: e2e tests
+name: Python CI Github-hosted
 
-on:
-  push:
-    branches:
-      - main
-    paths-ignore:
-      - '**.md'
-  pull_request:
-    paths-ignore:
-      - '**.md'
+on: push
 
 jobs:
-  test-setup-python:
-    name: Test setup-python
-    runs-on: ${{ matrix.operating-system }}
+  build:
+
+    runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        operating-system: [windows-latest]
+        python-version: [3.12]
+
     steps:
-     
+    - uses: actions/checkout@v2
 
-      - uses: actions/checkout@v4
-      - id: testLocalAction
-        uses: ./
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install pylint
         
-      - name: Run with setup-python 3.5
-        uses: ./
-        with:
-          python-version: 3.5
-      - name: Verify 3.5
-        run: python __tests__/verify-python.py 3.5
-
-      - name: Run with setup-python 3.6
-        uses: ./
-        with:
-          python-version: 3.6
-      - name: Verify 3.6
-        run: python __tests__/verify-python.py 3.6
-
-      - name: Run with setup-python 3.7
-        uses: ./
-        with:
-          python-version: 3.7
-      - name: Verify 3.7
-        run: python __tests__/verify-python.py 3.7
-
-      - name: Run with setup-python 3.8
-        uses: ./
-        with:
-          python-version: 3.8
-      - name: Verify 3.8
-        run: python __tests__/verify-python.py 3.8
-
-      - name: Run with setup-python 3.7.5
-        uses: ./
-        with:
-          python-version: 3.7.5
-      - name: Verify 3.7.5
-        run: python __tests__/verify-python.py 3.7.5
-
-      - name: Run with setup-python 3.6.7
-        uses: ./
-        with:
-          python-version: 3.6.7
-      - name: Verify 3.6.7
-        run: python __tests__/verify-python.py 3.6.7
-
-      - name: Run with setup-python 3.8.1
-        uses: ./
-        with:
-          python-version: 3.8.1
-      - name: Verify 3.8.1
-        run: python __tests__/verify-python.py 3.8.1
-
-      - name: Run with setup-python 3.10
-        id: cp310
-        uses: ./
-        with:
-          python-version: '3.10'
-      - name: Verify 3.10
-        run: python __tests__/verify-python.py 3.10
-      - name: Run python-path sample 3.10
-        run: pipx run --python '${{ steps.cp310.outputs.python-path }}' nox --version
-
-      - name: Run with setup-python ==3.8
-        uses: ./
-        with:
-          python-version: '==3.8'
-      - name: Verify ==3.8
-        run: python __tests__/verify-python.py 3.8
-
-      - name: Run with setup-python <3.11
-        uses: ./
-        with:
-          python-version: '<3.11'
-      - name: Verify <3.11
-        run: python __tests__/verify-python.py 3.10
-      - name: Test Raw Endpoint Access
-        run: |
-          curl -L https://raw.githubusercontent.com/actions/python-versions/main/versions-manifest.json | jq empty
-        shell: bash
+    - name: Running Linter
+      run: |
+        pylint app/*.py
+        
+    - name: Run unit tests
+      run: |
+        python tests/test_calculator.py
