--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -25,8 +25,9 @@ jobs:
       - name: Check Python version
         run: cd
 
-      - name: Change directory to repository root
-        run: cd ${{ github.workspace }}
+      - name: Checkout code again
+        uses: actions/checkout@v4
+
         
         
       - name: Install dependencies
