--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -26,7 +26,7 @@ jobs:
         run: cd
 
       - name: Change directory to repository root
-        run: cd ${{ github.workspace }}
+        run: cd "${{ github.workspace }}"
         
         
       - name: Install dependencies
