--- a/.github/workflows/ci_selfhosted.yml
+++ b/.github/workflows/ci_selfhosted.yml
@@ -33,9 +33,11 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pylint
-        
+      
+      # the deactivate conda environment is specific to my local machine, need to add venv to this  to remove this conda bash
       - name: Running Linter
         run: |
+          
           conda deactivate
           pylint ${{ github.workspace }}\app/*.py
         
